--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 10:14:00 PM</p>
+    <p class="lastupdate">09/07/2020 10:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">89.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">89.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">89.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.3&#176;F</td>
+        <td class="data">47.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.659 inHg (0.033)</td>
+        <td class="data">29.661 inHg (0.032)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph NW (315&#176;)</td>
+        <td class="data">7 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          354
+          353
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          356
+          355
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          360
+          359
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 7 hours, 27 minutes</td>
+      <td class="data">6 days, 7 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 7 hours, 27 minutes</td>
+      <td class="data">6 days, 7 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
