--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 11:09:00 PM</p>
+    <p class="lastupdate">09/07/2020 11:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">86.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">86.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">86.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.2&#176;F</td>
+        <td class="data">47.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.656 inHg (0.016)</td>
+        <td class="data">29.657 inHg (0.010)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.8&#176;F</td>
+        <td class="data">87.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 8 hours, 22 minutes</td>
+      <td class="data">6 days, 8 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 8 hours, 22 minutes</td>
+      <td class="data">6 days, 8 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
