--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/08/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.7&#176;F</td>
+        <td class="data">82.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.7&#176;F</td>
+        <td class="data">82.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.7&#176;F</td>
+        <td class="data">82.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.1&#176;F</td>
+        <td class="data">47.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.648 inHg (-0.013)</td>
+        <td class="data">29.649 inHg (-0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">87.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
     </tbody>
   </table>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:38:51 AM</td>
+          <td class="data">06:39:36 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:23:20 PM</td>
+          <td class="data">07:21:54 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:49:58 PM">
-            112.9</span><br/>
-          <span title="07:29:05 AM">
-            67.6</span>
+          <span title="12:00:01 AM">
+            82.7</span><br/>
+          <span title="12:01:29 AM">
+            82.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:49:58 PM" class="hival">
-            112.9</span>
+          <span title="12:00:01 AM" class="hival">
+            82.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:29:05 AM" class="loval">
-            67.6</span>
+          <span title="12:01:29 AM" class="loval">
+            82.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:23:38 AM">
-            58.4</span><br/>
-          <span title="05:32:46 PM">
-            43.5</span>
+          <span title="12:00:01 AM">
+            48.1</span><br/>
+          <span title="12:01:29 AM">
+            47.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:20:19 AM">
-            56</span><br/>
-          <span title="03:38:18 PM">
-            12</span>
+          <span title="12:00:01 AM">
+            30</span><br/>
+          <span title="12:00:01 AM">
+            30</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:20:19 AM (Monday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:09:01 AM">
-            29.836</span><br/>
-          <span title="07:00:03 PM">
-            29.625</span>
+          <span title="12:02:01 AM">
+            29.650</span><br/>
+          <span title="12:01:01 AM">
+            29.647</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:31:00 PM">
-            15</span><br/>
-          180
+          <span title="12:00:01 AM">
+            1</span><br/>
+          182
         </td>
         <td class="data new_row hilo_week">
           <span title="04:31:00 PM (Monday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          3</td>
+          0</td>
         <td class="data new_row hilo_week">
           3</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
-          354
+          0<br/>
+          180
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:17:02 PM">
-            91.2</span><br/>
-          <span title="07:35:01 AM">
-            78.3</span>
+          <span title="12:00:01 AM">
+            87.2</span><br/>
+          <span title="12:00:01 AM">
+            87.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="08:41:02 AM">
-            41</span><br/>
-          <span title="05:41:02 PM">
-            30</span>
+          <span title="12:00:01 AM">
+            30</span><br/>
+          <span title="12:01:01 AM">
+            29</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:41:02 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 9 hours, 12 minutes</td>
+      <td class="data">6 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 9 hours, 12 minutes</td>
+      <td class="data">6 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
