--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/08/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">112.9<br/>
-            <span class="timestamp">03:49:58 PM</span><br/>
-            67.6<br/>
-            <span class="timestamp">07:29:05 AM</span>
+          <td class="data new_row">82.7<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            82.5<br/>
+            <span class="timestamp">12:01:29 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">112.9<br/>
-            <span class="timestamp">03:49:58 PM</span>
+          <td class="data new_row">82.7<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">67.6<br/>
-            <span class="timestamp">07:29:05 AM</span>
+          <td class="data new_row">82.5<br/>
+            <span class="timestamp">12:01:29 AM</span>
           </td>
           <td class="data new_row">67.4<br/>
             <span class="timestamp">07:04:11 AM (Sunday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">58.4<br/>
-            <span class="timestamp">11:23:38 AM</span><br/>
-            43.5<br/>
-            <span class="timestamp">05:32:46 PM</span>
+          <td class="data new_row">48.1<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            47.9<br/>
+            <span class="timestamp">12:01:29 AM</span>
           </td>
           <td class="data new_row">58.4<br/>
             <span class="timestamp">11:23:38 AM (Monday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">56<br/>
-            <span class="timestamp">07:20:19 AM</span><br/>
-            12<br/>
-            <span class="timestamp">03:38:18 PM</span>
+          <td class="data new_row">30<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            30<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">56<br/>
             <span class="timestamp">07:20:19 AM (Monday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.836<br/>
-            <span class="timestamp">12:09:01 AM</span><br/>
-            29.625<br/>
-            <span class="timestamp">07:00:03 PM</span>
+          <td class="data new_row">29.650<br/>
+            <span class="timestamp">12:02:01 AM</span><br/>
+            29.647<br/>
+            <span class="timestamp">12:01:01 AM</span>
           </td>
           <td class="data new_row">29.954<br/>
             <span class="timestamp">09:59:02 AM (Sunday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            15<br/>
-            180<br/>
-            <span class="timestamp">04:31:00 PM</span>
+            1<br/>
+            182<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             15<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">3</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">3</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            1<br/>
-            354
+            0<br/>
+            180
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            91.2<br/>
-            <span class="timestamp">06:17:02 PM</span><br/>
-            78.3<br/>
-            <span class="timestamp">07:35:01 AM</span>
+            87.2<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            87.2<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             91.8<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            41<br/>
-            <span class="timestamp">08:41:02 AM</span><br/>
             30<br/>
-            <span class="timestamp">05:41:02 PM</span>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            29<br/>
+            <span class="timestamp">12:01:01 AM</span>
           </td>
           <td class="data new_row">
             41<br/>
