--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 12:44:00 AM</p>
+    <p class="lastupdate">09/08/2020 12:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.2&#176;F</td>
+        <td class="data">79.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">80.2&#176;F</td>
+        <td class="data">79.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.2&#176;F</td>
+        <td class="data">79.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.5&#176;F</td>
+        <td class="data">48.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.642 inHg (-0.020)</td>
+        <td class="data">29.640 inHg (-0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">2 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.0&#176;F</td>
+        <td class="data">85.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="12:37:31 AM">
-            80.2</span>
+          <span title="12:48:27 AM">
+            79.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:37:31 AM" class="loval">
-            80.2</span>
+          <span title="12:48:27 AM" class="loval">
+            79.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="12:42:01 AM">
-            29.641</span>
+          <span title="12:48:01 AM">
+            29.640</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          191
+          195
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="12:43:01 AM">
-            86.0</span>
+          <span title="12:46:01 AM">
+            85.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 9 hours, 57 minutes</td>
+      <td class="data">6 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 9 hours, 57 minutes</td>
+      <td class="data">6 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
